# 2026-spring-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  MIS-Independent-Study-Report.md  compressed.sh  docker-compose.yml  package-lock.json  package.json  readme.md  run_hot.sh
.github/: pages-root-index.html
.github/workflows/: jekyll-gh-pages.yml
client_wasm/: Attribution.md  CMakeLists.txt  Doxyfile  GameState.hpp  MainScene.hpp  README.md  Scene.hpp  asset_preload.hpp  camera_nav.hpp  dev_flags.hpp  doxygen.sh  main.cpp  menu.hpp  pbr_light_ids.hpp  run.sh  ws_init.hpp
client_wasm/assets/: chica.glb  door.glb  freddy_fnaf1_mask.glb  freddy_mask.glb  toy_chica.glb
client_wasm/assets-uncompressed/: chica.glb  door.glb  freddy_fnaf1_mask.glb  toy_chica.glb
client_wasm/assets-uncompressed/replacements/: vhs_tape_chica.glb
client_wasm/assets/replacements/: vhs_tape_chica.glb
client_wasm/assets/shaders/glsl100/: pbr.fs  pbr.vs
client_wasm/doxygen-awesome-css/: UPSTREAM.txt
client_wasm/include/nlohmann/: json.hpp
client_wasm/mainscene/helpers/: cam_switch_sound.hpp  camera_control.hpp  frame.hpp  pbr_lights.hpp
client_wasm/mainscene/helpers/rooms/: create_tronic_positions.hpp  tronic_position_map.hpp
docs/: _config.yml  build.md  client.md  economy.md  game-state.md  independent-study.md  index.md  scene-swapping.md  server.md
progress/: apr_16.md
server/: app.db  auth.go  auth.html  db.go  game  game.go  go.mod  go.sum  index.html  main.go  play.html  wasm_embed.go
